fix missing spaces between buttons from htmlmin

--- a/src/c3nav/editor/static/editor/css/editor.css
+++ b/src/c3nav/editor/static/editor/css/editor.css
@@ -313,3 +313,7 @@ h4 {
     color:#000000;
     background-color:#ffffff;
 }
+
+.btn + .btn {
+    margin-left: 5px;
+}
