--- a/src/c3nav/site/static/site/css/c3nav.scss
+++ b/src/c3nav/site/static/site/css/c3nav.scss
@@ -904,3 +904,6 @@ main .narrow form button {
         margin-top: 10px;
     }
 }
+button + button {
+    margin-left: 5px;
+}
